update(home) setup basic bundles and create home template (in draft)

--- a/templates/user/home.html.twig
+++ b/templates/user/home.html.twig
@@ -1,1 +1,6 @@
-{% include 'layout/header.html' %}
+{% extends 'base.html.twig' %}
+
+{% block body %}
+
+    {% include '/user/layout/header.html.twig' %}
+{% endblock %}
